objects/zkfedex__ShipmentSpecialServices__c.object
<CustomObject>
    <customHelpPage>zkfedex__shipmentSpecialServicesHelp</customHelpPage>
    <description>Shipment Special Services stores the various options associated with a FedEx shipment.</description>
    <fields>
        <fullName>zkfedex__AllowRecordDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Record Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__BsoAccount__c</fullName>
        <label>BSO Account</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__BsoCity__c</fullName>
        <label>BSO City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__BsoCompany__c</fullName>
        <label>BSO Company</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__BsoContactName__c</fullName>
        <label>BSO Contact Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__BsoContactPhone__c</fullName>
        <label>BSO Contact Phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__BsoCountry__c</fullName>
        <label>BSO Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__BsoPostalCode__c</fullName>
        <label>BSO Zip/Postal Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__BsoState__c</fullName>
        <label>BSO State/Province</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__BsoStreet__c</fullName>
        <label>BSO Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkfedex__BsoTaxIdType__c</fullName>
        <label>BSO Tax ID Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EIN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkfedex__BsoTaxId__c</fullName>
        <label>BSO Tax ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__Bso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BSO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__CodAddressIsResidential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COD Collection Address is Residential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__CodCity__c</fullName>
        <label>COD Collection City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__CodCollectionType__c</fullName>
        <label>COD Collection Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__CodCompany__c</fullName>
        <label>COD Collection Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__CodContactName__c</fullName>
        <label>COD Collection Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__CodContactPhone__c</fullName>
        <label>COD Collection Contact Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__CodContactTaxIdType__c</fullName>
        <label>COD Collection Contact Tax ID Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EIN</fullName>
                </value>
                <value>
                    <fullName>SSN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkfedex__CodContactTaxId__c</fullName>
        <label>COD Collection Contact Tax ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__CodPostalCode__c</fullName>
        <label>COD Collection Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__CodReferenceType__c</fullName>
        <label>COD Reference Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__CodState__c</fullName>
        <label>COD Collection State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__CodStreet__c</fullName>
        <label>COD Collection Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkfedex__CodTrackingId__c</fullName>
        <label>COD Tracking Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__Cod__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FedEx® Collect on Delivery (C.O.D.)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__DateCertainHomeDeliveryDate__c</fullName>
        <label>FedEx Date Certain Home Delivery® Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkfedex__FreightInsideDelivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Freight Inside Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__FreightInsidePickup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Freight Inside Pickup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__HalCity__c</fullName>
        <label>FedEx Location City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__HalPhone__c</fullName>
        <label>HAL Contact phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__HalPostalCode__c</fullName>
        <label>FedEx Location Zip/Postal Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__HalState__c</fullName>
        <label>FedEx Location State/Province</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__HalStreet__c</fullName>
        <label>FedEx Location Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkfedex__Hal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hold at FedEx Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__HomeDeliveryPremiumType__c</fullName>
        <label>Home Delivery Premium Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__ModKey__c</fullName>
        <label>Mod Key</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__SaturdayDelivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saturday Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__SaturdayHold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saturday Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__SaturdayPickup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saturday Pickup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__SelectedSignatureOption__c</fullName>
        <label>Selected Signature Option</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__Shipment__c</fullName>
        <label>Shipment</label>
        <referenceTo>zkfedex__Shipment__c</referenceTo>
        <relationshipName>Shipment_Special_Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zkfedex__TotalCodAmountCurrency__c</fullName>
        <label>COD Total Collection Amount Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__TotalCodAmount__c</fullName>
        <label>COD Total Collection Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>FedEx Shipment Special Services</label>
    <nameField>
        <displayFormat>SpecialServices-{000000000}</displayFormat>
        <label>Shipment Special Services Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FedEx Shipment Special Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>